<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/whiteTwo"
    android:layout_height="match_parent"
    tools:context=".controllers.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/whiteTwo"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/custom_create"
            android:layout_height="200dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:textColor="@color/deepColorOneText"
            android:textSize="30sp"
            style="@style/vollkornBoldStyled"
            android:layout_height="wrap_content"/>





        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_back"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:layout_margin="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/password"
            android:layout_margin="20dp"
            android:background="@drawable/input_back"
            android:ems="10"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            app:cornerRadius="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            app:rippleColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/deepColorOneText"
            android:layout_height="55dp"/>







    </LinearLayout>

</ScrollView>